default/objects/success__Async_Request__c/success__Async_Request__c.object-meta.xml
<CustomObject>
    <description>Used by the Assesment &amp; Rewarding engine (plus other processes) to queue and record asynchonous operations</description>
    <label>Async Request</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>