default/objects/success__Async_Request__c/fields/success__Async_Type__c.field-meta.xml
<CustomField>
    <fullName>success__Async_Type__c</fullName>
    <label>Async Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>