default/objects/success__Async_Request__c/fields/success__Collective__c.field-meta.xml
<CustomField>
    <fullName>success__Collective__c</fullName>
    <label>Collective</label>
    <length>18</length>
    <type>Text</type>
</CustomField>