default/objects/success__Async_Request__c/fields/success__CRON__c.field-meta.xml
<CustomField>
    <fullName>success__CRON__c</fullName>
    <label>CRON Expression</label>
    <length>50</length>
    <type>Text</type>
</CustomField>