default/objects/success__Async_Request__c/fields/success__Error__c.field-meta.xml
<CustomField>
    <fullName>success__Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>