default/objects/success__Async_Request__c/fields/success__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>success__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>