default/objects/success__Async_Request__c/fields/success__Hashcode__c.field-meta.xml
<CustomField>
    <fullName>success__Hashcode__c</fullName>
    <externalId>true</externalId>
    <label>Hashcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>