default/objects/success__Async_Request__c/fields/success__Params__c.field-meta.xml
<CustomField>
    <fullName>success__Params__c</fullName>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>