default/objects/success__Async_Request__c/fields/success__Priority__c.field-meta.xml
<CustomField>
    <fullName>success__Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>