default/objects/success__Async_Request__c/fields/success__Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>success__Run_DateTime__c</fullName>
    <label>Execution Time</label>
    <type>DateTime</type>
</CustomField>