default/objects/success__Async_Request__c/fields/success__Status__c.field-meta.xml
<CustomField>
    <fullName>success__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>