default/objects/success__Async_Request__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>success__Status__c</columns>
    <columns>success__Async_Type__c</columns>
    <columns>success__Error__c</columns>
    <columns>success__Params__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>