default/objects/success__Async_Request__c/listViews/success__Errors.listView-meta.xml
<ListView>
    <fullName>success__Errors</fullName>
    <columns>NAME</columns>
    <columns>success__Async_Type__c</columns>
    <columns>success__Error_Message__c</columns>
    <columns>success__Params__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>success__Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Errors</label>
    <language>en_US</language>
</ListView>